nyt toimii garmin kartat

--- a/Dockerfile-backup-1
+++ b/Dockerfile-backup-1
@@ -1,25 +1,10 @@
 #FROM ubuntu:18.04
 FROM ubuntu:22.04
 
-###########################
-#
-#  OHJEET 
-#
-###############################
-
-# buildaaminen
-# sudo docker build -t garmin-map .
-
-# ajaminen
-# sudo docker run -v /home/antti/tmp:/ready_maps -i -t garmin-map /bin/sh
-# ./generate_maps.sh
-
-
-
 # Set up environment and renderer user
 ENV TZ=Europe/Helsinki
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-#RUN adduser --disabled-password --gecos "" renderer
+RUN adduser --disabled-password --gecos "" renderer
 
 # Install packages
 RUN apt-get --yes update && \
@@ -31,10 +16,10 @@ RUN apt-get --yes update && \
 RUN apt-get install --yes libarchive-tools
 
 # Init user renderer
-#USER renderer
+USER renderer
 
-RUN mkdir /renderer
-WORKDIR /renderer/
+# Install OSM data files
+WORKDIR /home/renderer/
 
 # RUN wget -nv http://osm.thkukuk.de/data/bounds-latest.zip -O bounds.zip
 # RUN wget -nv http://osm.thkukuk.de/data/sea-latest.zip -O sea.zip
@@ -45,13 +30,17 @@ WORKDIR /renderer/
 # wget  http://osm.thkukuk.de/data/sea-latest.zip -O sea.zip
 # wget  http://download.geonames.org/export/dump/cities15000.zip -O cities.zip
 
-COPY --chown=renderer bounds.zip /renderer/
-COPY --chown=renderer sea.zip /renderer/
-COPY --chown=renderer cities.zip /renderer/
+COPY --chown=renderer bounds.zip /home/renderer/
+COPY --chown=renderer sea.zip /home/renderer/
+COPY --chown=renderer cities.zip /home/renderer/
+
+
+
+
 
 # Install SPLITTER
-RUN mkdir /renderer/download_splitter
-WORKDIR /renderer/download_splitter
+RUN mkdir /home/renderer/download_splitter
+WORKDIR /home/renderer/download_splitter
 RUN wget -nv http://www.mkgmap.org.uk/download/splitter-r653.zip
 
 # puretaan zip paketti siten, että yksi kerros hakemistorakenteesta tiputetaan pois
@@ -66,8 +55,8 @@ RUN rm -rf *
 
 
 # # Install MKGMAPS
-RUN mkdir /renderer/download_mkgmap
-WORKDIR /renderer/download_mkgmap
+RUN mkdir /home/renderer/download_mkgmap
+WORKDIR /home/renderer/download_mkgmap
 RUN wget -nv http://www.mkgmap.org.uk/download/mkgmap-r4912.zip
 RUN bsdtar --strip-components=1 -xvf mkgmap*.zip
 RUN cp mkgmap.jar ../
@@ -77,9 +66,23 @@ RUN cp -r lib ../mkgmap_lib
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # move content from libs directories to common lib
-WORKDIR /renderer
-RUN mkdir /renderer/lib
+WORKDIR /home/renderer
+RUN mkdir /home/renderer/lib
 
 # MOVE EI JOSTAIN SYYSTÄ ONNISTU?!?
 RUN cp mkgmap_lib/* lib/
@@ -88,8 +91,8 @@ RUN cp splitter_lib/* lib/
 
 # Configure stylesheets
 ARG NOCACHE=0
-RUN mkdir /renderer/styles
-WORKDIR /renderer/styles
+RUN mkdir /home/renderer/styles
+WORKDIR /home/renderer/styles
 RUN git clone https://github.com/Myrtillus/Garmin_OSM_TK_map.git .
 
 # JA JOSTAIN SYYSTÄ MOOVIT EI TAASKAAN TOIMI
@@ -99,7 +102,10 @@ RUN cp -r TK ..
 RUN cp -r TK_pathsonly ..
 
 
+
+USER root
 RUN mkdir /osm-data
+RUN chown renderer /osm-data
 
 
 # testaus vaiheessa kopsataan valmis file
@@ -111,12 +117,16 @@ COPY --chown=renderer islas-baleares-latest.osm.pbf /osm-data
 COPY --chown=renderer spain-latest.osm.pbf /osm-data
 
 RUN mkdir /ready_maps
+RUN chown renderer /ready_maps
 
 
-WORKDIR /renderer
+USER renderer
+
+
+WORKDIR /home/renderer
 
 # Copy scripts
-COPY --chown=renderer *.sh /renderer/
-COPY --chown=renderer *.py /renderer/
+COPY --chown=renderer *.sh /home/renderer/
+COPY --chown=renderer *.py /home/renderer/
 
-# CMD /renderer/generate_maps.sh
+# CMD /home/renderer/generate_maps.sh
